--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <span class="text-center sm:text-right hidden sm:grid">Expected: 05/2025</span>
                     </div>
                     <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">
-                        <span>BS in Computer Science, Concentrating in Information Sciences</span>
+                        <span>Bachelor of Science, Computer Science</span>
                     </div>
                 </div>
 
@@ -89,7 +89,7 @@
                         <span class="text-center sm:text-right hidden sm:grid">08/2022</span>
                     </div>
                     <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">
-                        <span>AS in Computer Science</span>
+                        <span>Assoicate of Science, Computer Science</span>
                     </div>
                 </div>
             </div>
