--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <span class="text-center sm:text-right hidden sm:grid">08/2022</span>
                     </div>
                     <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">
-                        <span>Assoicate of Science, Computer Science</span>
+                        <span>Associate of Science, Computer Science</span>
                     </div>
                 </div>
             </div>
