--- a/index.html
+++ b/index.html
@@ -34,12 +34,19 @@
         <h1 class="text-3xl animate-spinOnce font-bold mt-4 border-black border-b-2">Jaylen Rush</h1>
 
         <!-- Navigation Links -->
-        <div class="flex justify-center space-x-4 mt-4">
-            <a href="https://www.linkedin.com/in/jaylen-rush-2167581a1/" class="bg-gray-900 text-white px-10 py-4 rounded-md hover:bg-blue-600 transition"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://github.com/rushjaylen" class="bg-gray-900 text-white px-10 py-4 rounded-md hover:bg-gray-700 transition"><i class="fa-brands fa-github"></i></a>
-            <a href="https://www.instagram.com/rushjaylen7/" class="bg-gray-900 text-white px-10 py-4 rounded-md hover:bg-pink-800 transition"><i class="fa-brands fa-instagram"></i></a>
-            <a href="mailto:rushjaylen@gmail.com" class="bg-gray-900 text-white px-10 py-4 rounded-md hover:bg-gray-700 transition"><i class="fa-regular fa-envelope"></i></a>
-        </div>
+<div class="flex justify-center space-x-4 mt-4">
+    <a href="https://www.linkedin.com/in/jaylen-rush-2167581a1/" class="bg-gray-900 text-white w-10 h-10 rounded-full flex items-center justify-center hover:bg-blue-600 transition">
+        <i class="fa-brands fa-linkedin text-xl"></i>
+    </a>
+    <a href="https://github.com/rushjaylen" class="bg-gray-900 text-white w-10 h-10 rounded-full flex items-center justify-center hover:bg-gray-700 transition">
+        <i class="fa-brands fa-github text-xl"></i>
+    </a>
+    <a href="https://www.instagram.com/rushjaylen7/" class="bg-gray-900 text-white w-10 h-10 rounded-full flex items-center justify-center hover:bg-pink-800 transition">
+        <i class="fa-brands fa-instagram text-xl"></i>
+    </a>
+    <a href="mailto:rushjaylen@gmail.com" class="bg-gray-900 text-white w-10 h-10 rounded-full flex items-center justify-center hover:bg-gray-700 transition">
+        <i class="fa-regular fa-envelope text-xl"></i>
+    </a>
     </div>
 </nav>
 
