--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <a href="https://www.instagram.com/rushjaylen7/" class="bg-gray-900 text-white w-10 h-10 rounded-full flex items-center justify-center hover:bg-pink-800 transition">
         <i class="fa-brands fa-instagram text-xl"></i>
     </a>
-    <a href="mailto:rushjaylen@gmail.com" class="bg-gray-900 text-white w-10 h-10 rounded-full flex items-center justify-center hover:bg-gray-700 transition">
+    <a href="mailto:rushjay387@gmail.com" class="bg-gray-900 text-white w-10 h-10 rounded-full flex items-center justify-center hover:bg-gray-700 transition">
         <i class="fa-regular fa-envelope text-xl"></i>
     </a>
 </div>
