--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
         </p>
 
         <p class="mt-10 my-10 text-lg text-center">
-            In my spear time I enjoy fishing, hiking, traveling to new places, and playing video games. I'm also a huge fan of the Chicago Bears. Go Bears!
+            I enjoy fishing, hiking, traveling to new places, and playing video games in my spare time. I'm also a huge fan of the Chicago Bears. Go Bears!
         </p>
 
         <p class="mt-10 my-10 text-lg text-center">
-            I'm currently seeking an Assoicate/Junior Developer position to gain further experience in the space of Software Development or Cyber Security.
+            I'm currently seeking an Associate Developer position to gain further experience in the space of Software Development or Cyber Security.
         </p>
     </nav>
 </section>
@@ -81,7 +81,7 @@
                 <div class="p-2 sm:hover:bg-sky-200 sm:hover:shadow-xl rounded-md">
                     <div class="mx-auto mb-2 sm:mx-4 grid grid-row-2 gap-1 sm:grid-rows-0 sm:grid-cols-2 font-bold">
                         <span class="text-center sm:text-left">Indiana State University</span>
-                        <span class="text-center sm:text-right hidden sm:grid">Expected: 05/2025</span>
+                        <span class="text-center sm:text-right hidden sm:grid">05/2025</span>
                     </div>
                     <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">
                         <span>BS in Computer Science, Concentrating in Information Sciences</span>
@@ -115,7 +115,7 @@
                 <div class="p-2 sm:hover:bg-sky-200 sm:hover:shadow-xl rounded-md">
                     <div class="mx-auto mb-2 sm:mx-4 grid grid-row-2 gap-1 sm:grid-rows-0 sm:grid-cols-2 font-bold">
                         <span class="text-center sm:text-left">Indiana State University</span>
-                        <span class="text-center sm:text-right hidden sm:grid">08/2024 - Present</span>
+                        <span class="text-center sm:text-right hidden sm:grid">08/2024 - 05/2025</span>
                     </div>
                     <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-white text-center sm:text-left max-w-5xl">
                         <span class="font-bold">Web Developer (Volunteer)</span>
