--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
                     </div>
                     <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-white text-center sm:text-left max-w-5xl">
                         <span class="font-bold">Web Developer (Volunteer)</span>
-                        <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">Built and upkept websites for History department and African & African American History department.</div>
-                        <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">Designed and developed websites for spokespersons and guest speakers visiting the university.</div>
-                        <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">Collaborated with faculty and event coordinators to ensure website content aligned with event goals.</div>
+                        <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">-Built and upkept websites for History department and African & African American History department.</div>
+                        <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">-Designed and developed websites for spokespersons and guest speakers visiting the university.</div>
+                        <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">-Collaborated with faculty and event coordinators to ensure website content aligned with event goals.</div>
                     </div>
                 </div>
             </div>
