--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
                 <!-- Indiana State University - Web Developer -->
                 <div class="p-2 sm:hover:bg-sky-200 sm:hover:shadow-xl rounded-md">
                     <div class="mx-auto mb-2 sm:mx-4 grid grid-row-2 gap-1 sm:grid-rows-0 sm:grid-cols-2 font-bold">
-                        <span class="text-center sm:text-left">Indiana State University</span>
+                        <span class="text-center sm:text-left">Iban Enterprise LLC</span>
                         <span class="text-center sm:text-right hidden sm:grid">08/2024 - 05/2025</span>
                     </div>
                     <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-white text-center sm:text-left max-w-5xl">
-                        <span class="font-bold">Web Developer (Volunteer)</span>
-                        <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">-Built and upkept websites for History department and African & African American History department.</div>
-                        <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">-Designed and developed websites for spokespersons and guest speakers visiting the university.</div>
-                        <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">-Collaborated with faculty and event coordinators to ensure website content aligned with event goals.</div>
+                        <span class="font-bold">Software Engineer</span>
+                        <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">Built and upkept Database for IT Consulting.</div>
+                        <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">Collaborated with other engineers and project managers to design and develop scalable applications.</div>
+                        <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">Contributed to testing, documentation, and deployment processes.</div>
                     </div>
                 </div>
             </div>
