--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </div>
                     <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-white text-center sm:text-left max-w-5xl">
                         <span class="font-bold">Software Engineer</span>
-                        <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">Built and upkept Database for IT Consulting.</div>
+                        <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">Built and upkept databases for IT Consulting.</div>
                         <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">Collaborated with other engineers and project managers to design and develop scalable applications.</div>
                         <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">Contributed to testing, documentation, and deployment processes.</div>
                     </div>
