--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <div class="p-2 sm:hover:bg-sky-200 sm:hover:shadow-xl rounded-md">
                     <div class="mx-auto mb-2 sm:mx-4 grid grid-row-2 gap-1 sm:grid-rows-0 sm:grid-cols-2 font-bold">
                         <span class="text-center sm:text-left">Iban Enterprise LLC</span>
-                        <span class="text-center sm:text-right hidden sm:grid">08/2024 - 05/2025</span>
+                        <span class="text-center sm:text-right hidden sm:grid">05/2023 - Present</span>
                     </div>
                     <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-white text-center sm:text-left max-w-5xl">
                         <span class="font-bold">Software Engineer</span>
