--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </p>
 
         <p class="mt-10 my-10 text-lg text-center">
-            I'm currently seeking an Associate Developer position to gain further experience in the space of Software Development or Cyber Security.
+            I'm currently seeking an Associate Developer position to gain further experience in Software Development or Cybersecurity.
         </p>
     </nav>
 </section>
@@ -84,7 +84,7 @@
                         <span class="text-center sm:text-right hidden sm:grid">05/2025</span>
                     </div>
                     <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">
-                        <span>BS in Computer Science, Concentrating in Information Sciences</span>
+                        <span>BS in Computer Science, Concentrating in Information Science</span>
                     </div>
                 </div>
 
@@ -114,14 +114,14 @@
                 <!-- Indiana State University - Web Developer -->
                 <div class="p-2 sm:hover:bg-sky-200 sm:hover:shadow-xl rounded-md">
                     <div class="mx-auto mb-2 sm:mx-4 grid grid-row-2 gap-1 sm:grid-rows-0 sm:grid-cols-2 font-bold">
-                        <span class="text-center sm:text-left">Iban Enterprise LLC</span>
-                        <span class="text-center sm:text-right hidden sm:grid">05/2023 - Present</span>
+                        <span class="text-center sm:text-left">Indiana State University</span>
+                        <span class="text-center sm:text-right hidden sm:grid">08/2024 - 05/2025</span>
                     </div>
                     <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-white text-center sm:text-left max-w-5xl">
-                        <span class="font-bold">Software Engineer</span>
-                        <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">Built and upkept databases for IT Consulting.</div>
-                        <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">Collaborated with other engineers and project managers to design and develop scalable applications.</div>
-                        <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">Contributed to testing, documentation, and deployment processes.</div>
+                        <span class="font-bold">Software Engineer (Freelance)</span>
+                        <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">Built and updated websites for History department and Students.</div>
+                        <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">Helped with application section for Database and Automation for Interested Students using Python and SQL. </div>
+                        <div class="sm:mx-8 sm:px-4 sm:border-l-2 flex flex-col sm:border-black text-center sm:text-left max-w-5xl">Built Websites and Applications for students and family for their business.</div>
                     </div>
                 </div>
             </div>
