--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <section id="about" class="container mx-auto py-16 px-6">
         <h2 class="text-3xl font-bold text-center">About Me</h2>
         <p class="text-lg my-10 text-center">
-            Hello! I'm Jaylen Rush, a senior Computer Science student at Indiana State University with a strong passion for cybersecurity and software development. Throughout my academic journey, I've gained hands-on experience in areas such as system administration, network security, and full-stack web development. I enjoy tackling complex problems and developing solutions that enhance security and performance. My interests lie in building scalable, secure applications and exploring the intersection of technology and innovation. I’m constantly looking to grow my technical skills and take on new challenges in the world of tech.
+            Hello! I'm Jaylen Rush, a Recent Graduate. Throughout my academic journey, I've gained hands-on experience in areas such as data analysis, network security, and full-stack web development. I enjoy tackling complex problems and developing solutions that enhance security and performance. My interests lie in building scalable, secure applications and exploring the intersection of technology and innovation. I’m constantly looking to grow my technical skills and take on new challenges in the world of tech.
         </p>
 
         <p class="mt-10 my-10 text-lg text-center">
